tests/patsyn/should_compile/T14058.hs
{-# LANGUAGE DataKinds, PolyKinds #-}
module T14058 where

import T14058a (Sing(..))

foo :: Sing ('[ '[] ] :: [[a]])
foo = SCons SNil SNil
